feat: force pods with volumes to be scheduled on Cloud servers (#743)
Due to a bug in the scheduler a node with no driver instance might be
picked and the volume is stuck in pending as the "no capacity - >
reschedule" recovery is never triggered
[[0]](https://github.com/kubernetes/kubernetes/pull/122109),
[[1]](https://github.com/kubernetes-csi/external-provisioner/issues/544).

- See #400

---------

Co-authored-by: lukasmetzner <lukas@metzner.io>
Co-authored-by: Julian Tölle <julian.toelle@hetzner-cloud.de>

--- a/chart/.snapshots/default.yaml
+++ b/chart/.snapshots/default.yaml
@@ -142,6 +142,10 @@ spec:
                 operator: NotIn
                 values:
                 - "true"
+              - key: instance.hetzner.cloud/provided-by
+                operator: NotIn
+                values:
+                - robot
       tolerations:
         - effect: NoExecute
           operator: Exists
