--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -245,6 +245,10 @@ spec:
                 operator: NotIn
                 values:
                 - "true"
+              - key: instance.hetzner.cloud/provided-by
+                operator: NotIn
+                values:
+                - robot
       nodeSelector:
         foo: bar
       tolerations:
