--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Upload coverage reports to Codecov
         if: >
           !startsWith(github.head_ref, 'renovate/') &&
-          !startsWith(github.head_ref, 'release-please--')
+          !startsWith(github.head_ref, 'releaser-pleaser--')
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
