fix: try scheduling the csi controller on cloud nodes
This is only a partial fix, but in clusters where the `instance.hetzner.cloud/provided-by` label is present and set accordingly for cloud nodes it prevents the controller from being scheduled on non cloud nodes. We need this, as in our default behavior for fetching the default volume location we rely on the node name being a Hetzner cloud server.

--- a/chart/.snapshots/default.yaml
+++ b/chart/.snapshots/default.yaml
@@ -263,6 +263,16 @@ spec:
     spec:
       serviceAccountName: hcloud-csi-controller
       
+      affinity:
+        nodeAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - preference:
+              matchExpressions:
+              - key: instance.hetzner.cloud/provided-by
+                operator: In
+                values:
+                - cloud
+            weight: 1
       securityContext:
         fsGroup: 1001
       initContainers:
