--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,3 +115,77 @@ jobs:
         if: always()
         continue-on-error: true
         run: make -C dev down
+
+  nomad:
+    name: nomad ${{ matrix.nomad }}
+    runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.nomad }}
+      cancel-in-progress: true
+
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - nomad: 1.8.7
+            consul: 1.18.4
+
+    env:
+      TF_VAR_nomad_version: ${{ matrix.nomad }}
+      TF_VAR_consul_version: ${{ matrix.consul }}
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.23"
+
+      - uses: opentofu/setup-opentofu@v1
+        with:
+          tofu_version: v1.8.6 # renovate: datasource=github-releases depName=opentofu/opentofu
+          tofu_wrapper: false
+
+      - uses: docker/setup-buildx-action@v3
+
+      - uses: yokawasa/action-setup-kube-tools@v0.11.2
+        with:
+          setup-tools: |
+            skaffold
+          skaffold: v2.13.2 # renovate: datasource=github-releases depName=GoogleContainerTools/skaffold
+
+      - uses: hashicorp/setup-nomad@main
+        id: setup
+        with:
+          version: ${{ matrix.nomad }}
+
+      # used for generating the certificates
+      - name: setup consul binary
+        run: |
+          curl -o consul.zip https://releases.hashicorp.com/consul/${{ matrix.consul }}/consul_${{ matrix.consul }}_linux_amd64.zip
+          unzip consul.zip
+          mv consul /usr/local/bin/
+
+      - uses: hetznercloud/tps-action@main
+
+      - name: Setup environment
+        run: make -C nomad/dev up
+
+      - name: Run skaffold
+        run: |
+          source nomad/dev/files/env.sh
+          skaffold -f nomad/skaffold.yaml build
+
+      - name: Run tests
+        run: |
+          source nomad/dev/files/env.sh
+          go test -v -tags e2e test/e2e/nomad/...
+
+      - name: Cleanup
+        if: always()
+        continue-on-error: true
+        run: make -C nomad/dev down
