--- a/deploy/docker-swarm/pkg/config.json
+++ b/deploy/docker-swarm/pkg/config.json
@@ -1,16 +1,12 @@
 {
   "description": "Hetzner csi-driver plugin for Docker",
   "documentation": "https://github.com/hetznercloud/csi-driver",
-  "entrypoint": [
-    "/plugin/aio.bin"
-  ],
+  "entrypoint": ["/plugin/aio.bin"],
   "env": [
     {
       "name": "HCLOUD_TOKEN",
       "description": "authentication token to use when accessing the Hetzner Cloud API",
-      "settable": [
-        "value"
-      ],
+      "settable": ["value"],
       "value": ""
     },
     {
@@ -22,34 +18,23 @@
     {
       "name": "LOG_LEVEL",
       "description": "the log level to use",
-      "settable": [
-        "value"
-      ],
+      "settable": ["value"],
       "value": "debug"
     }
   ],
   "interface": {
     "socket": "hetzner-csi.sock",
-    "types": [
-      "docker.csicontroller/1.0",
-      "docker.csinode/1.0"
-    ]
+    "types": ["docker.csicontroller/1.0", "docker.csinode/1.0"]
   },
   "linux": {
     "allowAllDevices": true,
-    "capabilities": [
-      "CAP_SYS_ADMIN",
-      "CAP_CHOWN"
-    ]
+    "capabilities": ["CAP_SYS_ADMIN", "CAP_CHOWN"]
   },
   "mounts": [
     {
       "description": "used to access the dynamically attached block devices",
       "destination": "/dev",
-      "options": [
-        "rbind",
-        "rshared"
-      ],
+      "options": ["rbind", "rshared"],
       "name": "dev",
       "source": "/dev/",
       "type": "bind"
