--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,14 +23,14 @@ repos:
       - id: mixed-line-ending
         args: [--fix=lf]
       - id: trailing-whitespace
-        exclude: ^(chart/.snapshots/.*)$
+        exclude: ^(chart/.snapshots/.*|deploy/.*)$
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
       - id: prettier
         files: \.(md|ya?ml|json)$
-        exclude: ^(CHANGELOG.md|chart/templates/.*|chart/.snapshots/.*)$
+        exclude: ^(CHANGELOG.md|chart/templates/.*|chart/.snapshots/.*|deploy/.*)$
 
   - repo: local
     hooks:
