test: added pre-commit configuration
We added the pre-commit configuration file and simplified our CI scripts.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,6 +18,13 @@ jobs:
         with:
           python-version: 3.x
 
+      - uses: yokawasa/action-setup-kube-tools@v0.11.2
+        with:
+          # helm is needed to generate chart snapshots
+          setup-tools: |
+            helm
+          helm: v3.16.3 # renovate: datasource=github-releases depName=helm/helm
+
       - uses: pre-commit/action@v3.0.1
 
   lint:
