--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,22 @@ repos:
       - id: trailing-whitespace
         exclude: ^(chart/.snapshots/.*|deploy/.*)$
 
+  - repo: local
+    hooks:
+      - id: update-helm-snapshots
+        name: update-helm-snapshots
+        language: system
+        entry: bash ./hack/update-helm-snapshots.sh
+        files: ^(charts/.*|hack/update-helm-snapshots.sh$)
+        pass_filenames: false
+
+      - id: update-deployment-yamls
+        name: update-deployment-yamls
+        language: system
+        entry: bash ./hack/update-deployment-yamls.sh
+        files: ^(charts/.*|hack/update-deployment-yamls.sh$)
+        pass_filenames: false
+
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.1.0
     hooks:
