ci: added pre-commit (#811)
This PR introduces a pre-commit config which is used in our ci pipeline.
Furthermore, an additional formatting of all affected resources was
done.

The following config was used as a baseline:
https://github.com/hetznercloud/.github/blob/main/.pre-commit-config.yaml

---------

Co-authored-by: Jonas L. <jooola@users.noreply.github.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,24 @@ env:
   GOTOOLCHAIN: local
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+
+      - uses: yokawasa/action-setup-kube-tools@v0.11.2
+        with:
+          # helm is needed to generate chart snapshots
+          setup-tools: |
+            helm
+          helm: v3.16.3 # renovate: datasource=github-releases depName=helm/helm
+
+      - uses: pre-commit/action@v3.0.1
+
   lint:
     runs-on: ubuntu-latest
     steps:
