ci: export logs and events from nomad

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -170,6 +170,7 @@ jobs:
     env:
       TF_VAR_nomad_version: ${{ matrix.nomad }}
       TF_VAR_consul_version: ${{ matrix.consul }}
+      ENV: gha-${{ github.run_id }}-${{ github.run_attempt }}-${{ matrix.nomad }}
 
     steps:
       - uses: actions/checkout@v4
@@ -218,7 +219,56 @@ jobs:
           source nomad/dev/files/env.sh
           go test -v -tags e2e ./test/e2e/nomad/...
 
+      - name: Dump logs & events
+        if: always()
+        continue-on-error: true
+        run: |
+          source dev/files/env.sh
+          mkdir debug-logs
+
+          fetch_logs_from_job () {
+            ALLOC_IDS=$(nomad job allocs -json "$1" | jq -r ".[].ID")
+
+            for ALLOC_ID in $ALLOC_IDS; do
+                echo "::group::hcloud-csi.log::$1::$ALLOC_ID"
+                nomad alloc logs "$ALLOC_ID"
+                echo "::endgroup::"
+            done
+          }
+
+          fetch_events_from_job () {
+            ALLOC_IDS=$(nomad job allocs -json "$1" | jq -r ".[].ID")
+
+            for ALLOC_ID in $ALLOC_IDS; do
+                echo "::group::events.json::$1::$ALLOC_ID"
+                nomad alloc status -json $ALLOC_ID | jq -r ".TaskStates.plugin.Events"
+                echo "::endgroup::"
+            done
+          }
+
+          {
+              echo "::group::hcloud-csi.log"
+              fetch_logs_from_job hcloud-csi-controller
+              fetch_logs_from_job hcloud-csi-node
+              echo "::endgroup::"
+          } | tee debug-logs/hcloud-csi.log
+
+          {
+              echo "::group::events.json"
+              fetch_events_from_job hcloud-csi-controller
+              fetch_events_from_job hcloud-csi-node
+              echo "::endgroup::"
+          } | tee debug-logs/events.json
+
       - name: Cleanup
         if: always()
         continue-on-error: true
         run: make -C nomad/dev down
+
+      - name: Persist debug artifacts
+        if: always()
+        continue-on-error: true
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-logs-nomad-${{ env.ENV }}
+          path: debug-logs/
