feat: support ReadWriteOncePod
According to KEP-2485 [1], if the csi-driver exposes the SINGLE_NODE_MULTI_WRITER capability, then ReadWriteOncePod will map to the SINGLE_NODE_SINGLE_WRITER volume capability, otherwise it will map to SINGLE_NODE_WRITER. As a result, we partially supported ReadWriteOncePod but blocked it during a validation step in the `ControllerPublishVolume` method.

Additional reference:
- https://kubernetes.io/blog/2021/09/13/read-write-once-pod-access-mode-alpha/#accept-new-csi-access-modes

[1] https://github.com/kubernetes/enhancements/blob/master/keps/sig-storage/2485-read-write-once-pod-pv-access-mode/README.md#csi-specification-changes-volume-capabilities

--- a/test/e2e/kubernetes/testdriver.yaml
+++ b/test/e2e/kubernetes/testdriver.yaml
@@ -32,7 +32,7 @@ DriverInfo:
     topology: true
     capacity: false
     FSResizeFromSourceNotSupported: false
-    readWriteOncePod: false # https://github.com/hetznercloud/csi-driver/issues/327
+    readWriteOncePod: true # https://github.com/hetznercloud/csi-driver/issues/327
     multiplePVsSameID: true # No need to disable according to comment on CapMultiplePVsSameID
     capReadOnlyMany: false
   SupportedFsType:
