FEAT: (helm-chart) add extraParam for StorageClass

--- a/chart/templates/core/storageclass.yaml
+++ b/chart/templates/core/storageclass.yaml
@@ -18,6 +18,10 @@ allowedTopologies:
     values:
     - "cloud"
 {{- end}}
+{{- if $val.extraParam }}
+parameters:
+  {{- $val.extraParam | toYaml | nindent 2 }}
+{{- end}}
 ---
 {{- end }}
 {{- end }}
