--- a/chart/.snapshots/default.yaml
+++ b/chart/.snapshots/default.yaml
@@ -295,6 +295,8 @@ spec:
           resources:
             limits: {}
             requests: {}
+          args:
+           - -feature-gates=RecoverVolumeExpansionFailure=false
           volumeMounts:
           - name: socket-dir
             mountPath: /run/csi
