--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -515,6 +515,7 @@ spec:
               cpu: 12m
               memory: 22Mi
           args:
+           - -feature-gates=RecoverVolumeExpansionFailure=false
             - --leader-election
             - --leader-election-namespace=namespace-override
           volumeMounts:
