fix(helm-chart): render args empty if no condition applies

--- a/chart/.snapshots/example-prod.yaml
+++ b/chart/.snapshots/example-prod.yaml
@@ -393,6 +393,7 @@ spec:
               cpu: 10m
               memory: 20Mi
           args:
+            - -feature-gates=RecoverVolumeExpansionFailure=false
             - --leader-election
             - --leader-election-namespace=kube-system
           volumeMounts:
