--- a/chart/templates/controller/deployment.yaml
+++ b/chart/templates/controller/deployment.yaml
@@ -1,4 +1,5 @@
 {{ $enableLeaderElection := gt (int .Values.controller.replicaCount) 1 }}
+{{ $isKubeVersionBelow132 := semverCompare "<1.32-0" .Capabilities.KubeVersion.Version }}
 
 apiVersion: apps/v1
 kind: Deployment
@@ -94,9 +95,11 @@ spec:
           {{- if .Values.controller.resources.csiResizer }}
           resources: {{- toYaml .Values.controller.resources.csiResizer | nindent 12 }}
           {{- end }}
+          {{- if or $isKubeVersionBelow132 $enableLeaderElection }}
           args:
-          {{- if semverCompare "<1.32-0" .Capabilities.KubeVersion.Version }}
-           - -feature-gates=RecoverVolumeExpansionFailure=false
+          {{- end }}
+          {{- if $isKubeVersionBelow132 }}
+            - -feature-gates=RecoverVolumeExpansionFailure=false
           {{- end }}
           {{- if $enableLeaderElection }}
             - --leader-election
