--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -747,3 +747,10 @@ storageClasses:
   - name: hcloud-volumes
     defaultStorageClass: true
     reclaimPolicy: Delete
+    ## Optionally, specify StorageClass parameters to be added.
+    ## e.g.:
+    ## extraParameters:
+    ##   csi.storage.k8s.io/node-publish-secret-name: encryption-secret,
+    ##   csi.storage.k8s.io/node-publish-secret-namespace: kube-system
+    ##
+    extraParameters: {}
