--- a/chart/example-prod.values.yaml
+++ b/chart/example-prod.values.yaml
@@ -1,6 +1,7 @@
 controller:
   replicaCount: 2
   hcloudVolumeDefaultLocation: nbg1
+  hcloudVolumeDefaultLabels: env:production,team:devops,cluster:mycluster
   priorityClassName: "system-cluster-critical"
   resources:
     csiAttacher:
