--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -172,9 +172,9 @@ controller:
   ##
   hcloudVolumeDefaultLocation: ""
 
-  ## @param controller.hcloudVolumeDefaultLabels  Specifies default labels to apply to all newly created volumes. The value must be a comma-separated list of key:value pairs.
+  ## @param controller.volumeExtraLabels  Specifies default labels to apply to all newly created volumes. The value must be a map in the format key: value.
   ##
-  hcloudVolumeDefaultLabels: ""
+  volumeExtraLabels: {}
 
   ## @param controller.containerPorts.metrics controller metrics container port
   ## @param controller.containerPorts.healthz controller healthz container port
