--- a/chart/.snapshots/example-prod.yaml
+++ b/chart/.snapshots/example-prod.yaml
@@ -413,6 +413,7 @@ spec:
           args:
             - --feature-gates=Topology=true
             - --default-fstype=ext4
+            - --extra-create-metadata
             - --leader-election
             - --leader-election-namespace=kube-system
           volumeMounts:
@@ -442,6 +443,8 @@ spec:
               value: unix:///run/csi/socket
             - name: HCLOUD_VOLUME_DEFAULT_LOCATION
               value: "nbg1"
+            - name: HCLOUD_VOLUME_EXTRA_LABELS
+              value: "cluster=mycluster,env=production,team=devops"
             - name: METRICS_ENDPOINT
               value: "0.0.0.0:9189"
             - name: ENABLE_METRICS
