--- a/chart/.snapshots/full.yaml
+++ b/chart/.snapshots/full.yaml
@@ -535,6 +535,7 @@ spec:
           args:
             - --feature-gates=Topology=true
             - --default-fstype=ext4
+            - --extra-create-metadata
             - --leader-election
             - --leader-election-namespace=namespace-override
           volumeMounts:
