feat: allow to set labels for all volumes (#932)
This pull request adds support for setting default labels on all newly
created volumes in the Hetzner Cloud CSI driver.

## Changes

- Introduced the environment variable `HCLOUD_VOLUME_DEFAULT_LABELS`,
which accepts a comma-separated list of key:value pairs.
- Added the `ParseEnvMap` function to parse and validate the environment
variable into a `map[string]string`.
- Extended `VolumeService` to apply the parsed labels during volume
creation.
- Added unit tests for the `ParseEnvMap` function in
`internal/app/app_test.go`.

## Notes

- Labels are only applied if `HCLOUD_VOLUME_DEFAULT_LABELS` is set and
contains valid key=value pairs.
- Invalid formats in the environment variable will cause the controller
to fail on startup.

--- a/chart/example-prod.values.yaml
+++ b/chart/example-prod.values.yaml
@@ -1,6 +1,10 @@
 controller:
   replicaCount: 2
   hcloudVolumeDefaultLocation: nbg1
+  volumeExtraLabels:
+    env: production
+    team: devops
+    cluster: mycluster
   priorityClassName: "system-cluster-critical"
   resources:
     csiAttacher:
