--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -172,6 +172,10 @@ controller:
   ##
   hcloudVolumeDefaultLocation: ""
 
+  ## @param controller.volumeExtraLabels  Specifies default labels to apply to all newly created volumes. The value must be a map in the format key: value.
+  ##
+  volumeExtraLabels: {}
+
   ## @param controller.containerPorts.metrics controller metrics container port
   ## @param controller.containerPorts.healthz controller healthz container port
   ##
