test: serve metrics to track coverage
Enable metrics for e2e tests to track coverage.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -34,3 +34,5 @@ deploy:
           node.extraVolumes[0].emptyDir: {}
           node.extraVolumeMounts[0].name: coverage
           node.extraVolumeMounts[0].mountPath: "/coverage"
+
+          metrics.enabled: "true"
