--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -195,8 +195,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - nomad: 1.10.1 # renovate: datasource=github-releases depName=hashicorp/nomad
-            consul: 1.21.0 # renovate: datasource=github-releases depName=hashicorp/consul
+          - nomad: 1.10.1 # renovate: datasource=github-releases depName=hashicorp/nomad extractVersion=v(?<version>.+)
+            consul: 1.21.0 # renovate: datasource=github-releases depName=hashicorp/consul extractVersion=v(?<version>.+)
 
     env:
       TF_VAR_nomad_version: ${{ matrix.nomad }}
