--- a/chart/templates/node/daemonset.yaml
+++ b/chart/templates/node/daemonset.yaml
@@ -98,7 +98,9 @@ spec:
         - name: hcloud-csi-driver
           image: {{ include "common.images.image" (dict "value" .Values.node.image.hcloudCSIDriver "context" .) }} # x-releaser-pleaser-version
           imagePullPolicy: {{ .Values.node.image.hcloudCSIDriver.pullPolicy }}
-          command: [/bin/hcloud-csi-driver-node]
+          command: [/bin/hcloud-csi-driver]
+          args:
+            - -node
           volumeMounts:
             - name: kubelet-dir
               mountPath: {{ .Values.node.kubeletDir }}
