--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,7 @@ builds:
       - amd64
       - arm64
       - arm
-    binary: hcloud-csi-driver.bin
+    binary: hcloud-csi-driver
 
 dockers:
   - build_flag_templates: [--platform=linux/amd64]
