--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -31,3 +31,11 @@ RUN apk add --no-cache \
 
 ENV GOTRACEBACK=all
 COPY --from=builder /build/hcloud-csi-driver /bin/hcloud-csi-driver
+
+# Creating compatibility wrapper scripts to avoid breaking existing installations
+# that rely on separate entrypoints. This ensures upgrading only the image tag is possible.
+RUN echo -e '#!/bin/sh\nexec /bin/hcloud-csi-driver -node "$@"' > /bin/hcloud-csi-driver-node && \
+    echo -e '#!/bin/sh\nexec /bin/hcloud-csi-driver -controller "$@"' > /bin/hcloud-csi-driver-controller && \
+    chmod +x /bin/hcloud-csi-driver-node /bin/hcloud-csi-driver-controller
+
+ENTRYPOINT /bin/hcloud-csi-driver
