feat: single binary (#996)
As we already have an AIO binary, we can make that configurable to start
either the controller, the node driver, or both. This makes distributing
the csi-driver in binary form easier.

--- a/deploy/docker-swarm/pkg/Dockerfile
+++ b/deploy/docker-swarm/pkg/Dockerfile
@@ -9,7 +9,7 @@ ADD . /build/
 RUN ls -al
 
 ARG CGO_ENABLED=0
-RUN go build -o aio.bin github.com/hetznercloud/csi-driver/cmd/aio
+RUN go build -o hcloud-csi-driver github.com/hetznercloud/csi-driver/cmd
 
 FROM --platform=$TARGETPLATFORM alpine:3.22
 
@@ -25,6 +25,7 @@ RUN apk add --no-cache \
 
 ENV GOTRACEBACK=all
 RUN mkdir -p /plugin
-COPY --from=builder /build/aio.bin /plugin
+COPY --from=builder /build/hcloud-csi-driver /plugin
 
-ENTRYPOINT [ "/plugin/aio.bin" ]
+ENTRYPOINT [ "/plugin/hcloud-csi-driver" ]
+CMD [ "-controller", "-node" ]
