ci: split unit and integration tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  test:
+  unit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -16,7 +16,27 @@ jobs:
           go-version-file: go.mod
 
       - name: Run tests
-        run: go test -v -tags integration -race -coverprofile=coverage.txt ./...
+        run: go test -v -race -coverprofile=coverage.txt ./...
+
+      - name: Upload coverage reports to Codecov
+        if: >
+          !startsWith(github.head_ref, 'renovate/') &&
+          !startsWith(github.head_ref, 'releaser-pleaser--')
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  integration:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - uses: actions/setup-go@v6
+        with:
+          go-version-file: go.mod
+
+      - name: Run tests
+        run: go test -v -tags integration -race -coverprofile=coverage.txt ./test/integration
 
       - name: Upload coverage reports to Codecov
         if: >
